# car-rental

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  car_rental.env.example  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
migrations/: alembic.ini  env.py
migrations/versions/: 4d47952600b7_2020-03-15_init_db.py  f23ae3107298_2020-03-16_init.py
rental_app/: __init__.py  cli.py  config.py  enums.py
rental_app/blueprints/: __init__.py  index.py
rental_app/controllers/: cars.py  rents.py
rental_app/models/: __init__.py  cars.py  commons.py  logs.py
rental_app/resources/: __init__.py
rental_app/schemas/: __init__.py  cars.py  logs.py
rental_app/task/: __init__.py
rental_app/tools/: __init__.py  commons.py  env.py
tests/: conftest.py  factories.py  test_app.py
tests/behave/features/: environment.py  fixtures.py  rental_cli.feature
tests/behave/features/steps/: rental_cli.py
tests/integration_test/test_httpservice/: test_examplemodule.py
tests/unit_test/: test_tools.py
