[metadata]
name = car_rental_app
version = 0.0.1

[behave]
paths = tests/behave/features
logging_level = DEBUG
show_skipped = false
tags = ~wip
stderr_capture=False
stdout_capture=False

[flake8]
statistics = true
max-line-length = 120
max-complexity = 10
exclude = .git,__pycache__,build,dist,venv,.venv,.eggs,migrations
; we should try to ignore nothing
ignore = F811,F401,W503,E203,E302,F403


[mypy]
strict_optional = True
check_untyped_defs = True
ignore_errors = False
ignore_missing_imports = True
warn_no_return = False
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
follow_imports = silent

[coverage:run]
branch = True
source = rental_app
omit =
    */__init__.py
    */app.py
    */*schemas.py
    */enums.py

[coverage:report]
fail_under = 80
sort = Miss
show_missing = True
skip_covered = False

[isort]
multi_line_output = 3
include_trailing_comma = true
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = FIRSTPARTY
force_single_line = false
use_parentheses = true
line_length = 88
known_first_party=rental_app
